2.14.1 (26-10-2022)
- Refactor: Remove branch group subclasses
- Refactor: Replace usage of deprecated OccupationPeriodServices

2.14.0 (18-10-2022)
- Refactor: Remove unused Struts module configuration

2.13.3 (01-09-2022)
- Refactor: Replace usage of RegistrationStateType by RegistrationStateTypeEnum

2.13.2 (16-08-2022)
- Improvement: Add support for multiple institution codes on configuration
- Refactor: Change the visibility of numberOfMonthsOfAcademicYear on SocialServicesConfiguration

2.13.1 (19-05-2022)
- Refactor: Changed the visibility of the DML attributes to SAS/SICABE integration 

2.13.0 (12-05-2022)
- Refactor: Move SAS/SICABE integration code to legal pt 

2.12.0 (03-05-2022)
- Feature: Add placeholder reportName and the delete to LegalReportRequest

2.11.1 (24-02-2022)
- Bug fix - change isFirstTimeOnDegree method (according to DGES information)

2.11.0 (07-12-2021)
- Refactor: Change specifications packages to legalpt 
- Refactor: Update academic-core dependency

2.10.7 (01-10-2021)
- Feature: Add placeholder fields and some changes to conform to newest PAPNCE structure

2.10.6 (11-02-2021)
- Bug fix - Exclude extra curricular courses at isOnlyEnrolledOnCompetenceCourseType method - UL-ISA-2017


2.10.5 (06-02-2021)
- Refactor: Remove references of deprecated slots of qualification

2.10.4 (03-02-2021)
- Bug fix - isFirstTimeOnDegree - #UL-FC-2363

2.10.3 (22-01-2021)
- Bug fix: On A3ES export, replace non standard double quotes

2.10.2 (20-01-2021)
- Bug fix: On A3ES export, replace non standard dashes

2.10.1 (05-01-2021)
- Improvement: Added new XSD files for RAIDES 2020
- Bug fix: RAIDES: Validate mobility origin country

2.10.0 (09-11-2020)
- Improvement: Added excluded dregrees to RaidesInstance

2.9.7 (14-07-2020)
- Refactor: Upgraded dependency of fenixedu-academic-core and academic-extensions
- Bug fix: When exporting teacher jobs to A3ES, untie sort by comparing by externalId   

2.9.6 (25-04-2020)