@@ -1,3 +1,5 @@
+- Bug fix - add SchoolLevelType.FIRST_CYCLE_INTEGRATED_MASTER_DEGREE to DEGREE_SCHOOL_LEVELS
+
 2.14.1 (26-10-2022)
 - Refactor: Remove branch group subclasses
 - Refactor: Replace usage of deprecated OccupationPeriodServices
